3.20 release